// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bsky actor likes feed views does include users with creator block relationship in reference lists for creator 1`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "frankie.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": true,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(3)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`bsky actor likes feed views does include users with creator block relationship in reference lists for creator 2`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "frankie.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": true,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(3)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`bsky actor likes feed views does not include reference lists in getActorLists 1`] = `
Array [
  Object {
    "cid": "cids(0)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "mod2",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
  },
  Object {
    "cid": "cids(1)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "mod1",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(1)",
  },
  Object {
    "cid": "cids(2)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 2,
    "name": "mod0",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(2)",
  },
  Object {
    "cid": "cids(3)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "cur2",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(3)",
  },
  Object {
    "cid": "cids(4)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "cur1",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(4)",
  },
  Object {
    "cid": "cids(5)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 3,
    "name": "cur0",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(5)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference and curate lists for signed-out viewers 1`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference and curate lists for signed-out viewers 2`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference lists for non-creator, in-list viewers 1`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "blocking": "record(2)",
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference lists for non-creator, in-list viewers 2`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "blocking": "record(2)",
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference lists for non-creator, not-in-list viewers 1`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does not include users with creator block relationship in reference lists for non-creator, not-in-list viewers 2`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views does return all users regardless of creator block relationship in moderation lists 1`] = `
Array [
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "greta.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  Object {
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "frankie.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views supports using a handle as getList actor param 1`] = `
Array [
  Object {
    "cid": "cids(0)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "mod2",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
  },
  Object {
    "cid": "cids(1)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "mod1",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(1)",
  },
  Object {
    "cid": "cids(2)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 2,
    "name": "mod0",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(2)",
  },
  Object {
    "cid": "cids(3)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "cur2",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(3)",
  },
  Object {
    "cid": "cids(4)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 0,
    "name": "cur1",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(4)",
  },
  Object {
    "cid": "cids(5)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": Array [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 3,
    "name": "cur0",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(5)",
  },
]
`;
